--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: birdnet
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Identifying bird species by their sounds.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Stefan Kahl
+Maintainer: Stefan Kahl <stefan.kahl@cornell.edu>
+Description: This packages is a wrapper for the BirdNET Python package.
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports:
+    reticulate
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
