use package file doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,8 @@ export(get_top_prediction)
 export(init_model)
 export(install_birdnet)
 export(predict_species)
+import(reticulate)
+importFrom(reticulate,configure_environment)
+importFrom(reticulate,import)
+importFrom(reticulate,use_python_version)
+importFrom(reticulate,use_virtualenv)
