adds function predict_species_at_location_and_time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_top_prediction)
 export(init_model)
 export(install_birdnet)
 export(predict_species)
+export(predict_species_at_location_and_time)
 import(reticulate)
 importFrom(reticulate,configure_environment)
 importFrom(reticulate,import)
