--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+URL: https://birdnet-team.github.io/birdnetR/
