--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Type: Package
 Title: Identifying bird species by their sounds
 Version: 0.1.1
 Authors@R: c(
-  person("Stefan", "Kahl", email = "stefan.kahl@cornell.edu", role = c("aut", "cre")),
+  person("Felix", "Günther", email = "felix.guenther@informatik.tu-chemnitz.de", role = c("cre")),
+  person("Stefan", "Kahl", email = "stefan.kahl@cornell.edu", role = c("aut")),
   person("BirdNET", "Team", role = c("aut")))
 Description: This packages is a wrapper for the BirdNET Python package.
 License: MIT + file LICENSE
