--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -67,10 +67,14 @@ jobs:
       - name: Install BirdNet
         shell: Rscript {0}
         run: |
-          devtools::load_all()
           library(reticulate)
           reticulate::use_virtualenv("r-birdnet", required = TRUE)
+
+          install.packages("devtools")
+          library(devtools)
+          devtools::load_all()
           birdnetR::install_birdnet()
+          
 
       - uses: r-lib/actions/check-r-package@v2
         with:
