rename `get_species_from_file` tp `read_labels`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,12 @@ export(birdnet_model_meta)
 export(birdnet_model_protobuf)
 export(birdnet_model_tflite)
 export(get_labels_path)
-export(get_species_from_file)
 export(get_top_prediction)
 export(init_model)
 export(install_birdnet)
 export(predict_species_at_location_and_time)
 export(predict_species_from_audio_file)
+export(read_labels)
 import(reticulate)
 importFrom(reticulate,configure_environment)
 importFrom(reticulate,import)
