--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,40 +45,17 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck reticulate
+          extra-packages: any::rcmdcheck reticulate devtools
           needs: check
 
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # - name: setup r-birdnet venv
-      #   shell: Rscript {0}
-      #   run: |
-
-      #     path_to_python <- reticulate::virtualenv_create(
-      #       envname = "r-birdnet",
-      #       python = Sys.which("python"), # placed on PATH by the setup-python action
-      #       packages = c(
-      #         "numpy", "pandas"
-      #       )
-      #     )
-
-      #     writeLines(sprintf("RETICULATE_PYTHON=%s", path_to_python),
-      #                Sys.getenv("GITHUB_ENV"))
-
 
       - name: setup r-birdnet venv and install birdnet
         shell: Rscript {0}
         run: |
-
-          reticulate::install_python("3.11")
-          reticulate::virtualenv_create(envname = "r-birdnet", 
-                                        version = "3.11")
-          reticulate::use_virtualenv("r-birdnet")
-
-          install.packages("devtools")
-          library(devtools)
           devtools::load_all()
           birdnetR::install_birdnet()
 
