--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -56,6 +56,8 @@ jobs:
       - name: setup r-birdnet venv and install birdnet
         shell: Rscript {0}
         run: |
+
+          reticulate::install_python("3.11")
           devtools::load_all()
           birdnetR::install_birdnet()
 
